# prng

./: CHANGELOG.md  CMakeLists.txt  README.md
include/prng/: prng.hpp
test/: CMakeLists.txt  prng-test-ranges.cpp  prng-test-stdout.cpp
